--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "helmet": "^8.1.0",
     "mongoose": "^9.1.6",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "sharp": "^0.34.5",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
