chore: prevent audio artifacts in tests

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ pnpm-lock.yaml
 firebase-service-account.json
 dharma-flow-firebase-adminsdk-fbsvc-5b2a510c72.json
 .opencode/
+public/storage/dharma-audio/
