chore: add validation utilities and update config files
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ firebase-service-account.json
 dharma-flow-firebase-adminsdk-fbsvc-5b2a510c72.json
 .opencode/
 public/storage/dharma-audio/
+.vercel
+.env*.local
